# -

./: .aider.chat.history.md  CMakeLists.txt
include/glad/: glad.h
shaderstest/: fragment_shader.glsl  vertex_shader.glsl
src/: SkeletonHandler.cpp  SkeletonHandler.h  SkinnedModel.cpp  SkinnedModel.h  glad.c  main.cpp
